tests/init_state/move_and_drop/read_after_move.err.expected
error: at 7:13: [INIT-UseAfterMove] In function 'f', block 'entry': variable 'x' is used after move
   |
 7 |             z = copy x;
   |             ^^^^^^^^^^
